# cmake-lib-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: protobuf.cmake  vcpkg.cmake
proto/: hello.proto
src/: CMakeLists.txt  hello.cc  hello.hh
